--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,47 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-<!--    <style name="Theme.PictureOfTheDay" parent="Theme.Material3.DayNight">-->
-    <style name="Theme.PictureOfTheDay" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.PictureOfTheDay" parent="Theme.Material3.DayNight">
+<!--    <style name="Theme.PictureOfTheDay" parent="Theme.MaterialComponents.DayNight.DarkActionBar">-->
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#BF0D0D</item>
+
+
+<!--        <item name="colorPrimary">#BF0D0D</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">#BECF17</item>
+        &lt;!&ndash; Secondary brand color. &ndash;&gt;
+        <item name="colorSecondary">#3D3E34</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/black</item>-->
+//
+        <item name="android:navigationBarColor">@color/red_500</item>
+        <item name="colorPrimary">@color/red_600</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryContainer">@color/red_100</item>
+        <item name="colorOnPrimaryContainer">@color/red_900</item>
+        <item name="colorPrimaryInverse">@color/red_200</item>
+        <item name="colorSecondary">@color/red_600</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorSecondaryContainer">@color/red_100</item>
+        <item name="colorOnSecondaryContainer">@color/red_900</item>
+        <item name="colorTertiary">@color/red_600</item>
+        <item name="colorOnTertiary">@color/white</item>
+        <item name="colorTertiaryContainer">@color/red_100</item>
+        <item name="colorOnTertiaryContainer">@color/red_900</item>
+//
+
+<!--        <item name="boxStrokeColor">@style/TheStyleTextInputLayout</item>-->
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
+        <item name="textInputStyle">@style/TheStyleTextInputLayout</item>
+    </style>
+
+
+<!--    <style name="TheStyleTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
+    <style name="TheStyleTextInputLayout" parent="Widget.Material3.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">#CDDC39</item>
+        <item name="helperTextTextColor">#3975DC</item>
+        <item name="boxBackgroundColor">#3975DC</item>
     </style>
 </resources>
+
