--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<!--    PADDING-->
+    <dimen name="padding_mini">2dp</dimen>
+    <dimen name="padding_half">4dp</dimen>
+    <dimen name="padding">8dp</dimen>
     <dimen name="padding_double">16dp</dimen>
+<!--    MARGIN-->
+    <dimen name="margin_mini">2dp</dimen>
+    <dimen name="margin_half">4dp</dimen>
+    <dimen name="margin">8dp</dimen>
+    <dimen name="margin_double">16dp</dimen>
 </resources>
