--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PictureOfTheDay" parent="Theme.Material3.DayNight">
-<!--    <style name="Theme.PictureOfTheDay" parent="Theme.MaterialComponents.DayNight.DarkActionBar">-->
+<!--    <style name="Theme.PictureOfTheDay" parent="Theme.Material3.DayNight">-->
+    <style name="Theme.PictureOfTheDay" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
 
 
@@ -37,11 +37,16 @@
     </style>
 
 
-<!--    <style name="TheStyleTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
-    <style name="TheStyleTextInputLayout" parent="Widget.Material3.TextInputLayout.OutlinedBox">
-        <item name="boxStrokeColor">#CDDC39</item>
-        <item name="helperTextTextColor">#3975DC</item>
-        <item name="boxBackgroundColor">#3975DC</item>
+    <style name="TheStyleTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+<!--    <style name="TheStyleTextInputLayout" parent="Widget.Material3.TextInputLayout.OutlinedBox">-->
+        <item name="boxStrokeColor">#000000</item>
+        <item name="helperTextTextColor">#000000</item>
+        <item name="boxBackgroundColor">#DADFE6</item>
+        <item name="helperTextEnabled">true</item>
+        <item name="hintTextColor">#000000</item>
+        <item name="counterEnabled">true</item>
+        <item name="counterMaxLength">25</item>
+
     </style>
 </resources>
 
