--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="margin_half">4dp</dimen>
     <dimen name="margin">8dp</dimen>
     <dimen name="margin_double">16dp</dimen>
+    <dimen name="behavior_peek_height">50dp</dimen>
 </resources>
