--- a/app/src/main/res/layout/fragment_picture_of_the_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day.xml
@@ -42,8 +42,8 @@
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/chipGroup"
         android:layout_width="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         app:singleSelection="true">
 
         <com.google.android.material.chip.Chip
@@ -69,12 +69,12 @@
             android:id="@+id/chipFullHD"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Full-HD" />
+            android:text="@string/full_hd" />
     </com.google.android.material.chip.ChipGroup>
 
 
     <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottom_app_bar"
+        android:id="@+id/bottomAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -87,6 +87,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="?colorOnPrimary"
-        app:layout_anchor="@id/bottom_app_bar"
+        app:layout_anchor="@id/bottomAppBar"
         app:srcCompat="@drawable/ic_plus_fab" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
