--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,13 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<!--    PADDING-->
+<!--    Main_padding_dimens-->
     <dimen name="padding_mini">2dp</dimen>
     <dimen name="padding_half">4dp</dimen>
     <dimen name="padding">8dp</dimen>
     <dimen name="padding_double">16dp</dimen>
-<!--    MARGIN-->
+<!--    Main_margin_dimens-->
     <dimen name="margin_mini">2dp</dimen>
     <dimen name="margin_half">4dp</dimen>
     <dimen name="margin">8dp</dimen>
     <dimen name="margin_double">16dp</dimen>
+<!--    navigation_view_dimens-->
+    <dimen name="navigation_view_margin_start">8dp</dimen>
+    <dimen name="navigation_view_margin_top">8dp</dimen>
+    <dimen name="navigation_view_margin_end">8dp</dimen>
+    <dimen name="navigation_view_margin_bottom">8dp</dimen>
+<!--    Bottom_sheet_container_dimens-->
+    <dimen name="bottom_sheet_line_width">25dp</dimen>
+    <dimen name="bottom_sheet_line_height">1dp</dimen>
+    <dimen name="bottom_sheet_line_margin_top">4dp</dimen>
+    <dimen name="bottom_sheet_line_margin_start">4dp</dimen>
+    <dimen name="bottom_sheet_line_margin_bottom">4dp</dimen>
+    <dimen name="bottom_sheet_line_margin_end">4dp</dimen>
+    <dimen name="behavior_peek_height">50dp</dimen>
+    <dimen name="title_margin_top">4dp</dimen>
+    <dimen name="title_padding_start">8dp</dimen>
+    <dimen name="title_padding_end">8dp</dimen>
+    <dimen name="explanation_padding_start">8dp</dimen>
+    <dimen name="explanation_padding_end">8dp</dimen>
 </resources>
