--- a/app/src/main/res/layout/bottom_shift_layout.xml
+++ b/app/src/main/res/layout/bottom_shift_layout.xml
@@ -24,9 +24,9 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/title_margin_top"
-        android:paddingStart="@dimen/title_padding_start"
-        android:paddingEnd="@dimen/title_padding_end"
+        android:layout_marginTop="@dimen/bottom_sheet_title_margin_top"
+        android:paddingStart="@dimen/bottom_sheet_title_padding_start"
+        android:paddingEnd="@dimen/bottom_sheet_title_padding_end"
         android:textColor="#000"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,8 +38,8 @@
         android:id="@+id/explanation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/explanation_padding_start"
-        android:paddingEnd="@dimen/explanation_padding_end"
+        android:paddingStart="@dimen/bottom_sheet_explanation_padding_start"
+        android:paddingEnd="@dimen/bottom_sheet_explanation_padding_end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
