--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,16 +2,8 @@
     <!-- Base application theme. -->
 <!--    <style name="Theme.PictureOfTheDay" parent="Theme.Material3.DayNight">-->
     <style name="Theme.PictureOfTheDay" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color default. -->
-<!--        <item name="colorPrimary">#BF0D0D</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        &lt;!&ndash; Secondary brand color. &ndash;&gt;
-        <item name="colorSecondary">#3D3E34</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>-->
 
-        <!-- Primary brand color new. -->
+        <!-- Primary brand color -->
         <item name="android:navigationBarColor">@color/red_500</item>
         <item name="colorPrimary">@color/red_600</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -26,33 +18,15 @@
         <item name="colorOnTertiary">@color/white</item>
         <item name="colorTertiaryContainer">@color/red_100</item>
         <item name="colorOnTertiaryContainer">@color/red_900</item>
-        <!--<item name="boxStrokeColor">@style/TheStyleTextInputLayout</item>-->
-
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
 
-
         <!-- Customize your theme here. -->
-        <item name="textInputStyle">@style/TheStyleTextInputLayout</item>
-        <item name="floatingActionButtonStyle">@style/TheStyleFloatingActionButton</item>
-        <item name="chipStyle">@style/TheStyleChip</item>
+        <item name="textInputStyle">@style/StyleForTextInputLayout</item>
+        <item name="floatingActionButtonStyle">@style/StyleForFAB</item>
+        <item name="chipStyle">@style/StyleForChip</item>
     </style>
 
-<!--    Custom styles-->
-    <style name="TheStyleTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
-<!--    <style name="TheStyleTextInputLayout" parent="Widget.Material3.TextInputLayout.OutlinedBox">-->
-        <item name="boxStrokeColor">#5E9300</item>
-        <item name="boxBackgroundColor">#DADFE6</item>
-        <item name="hintTextColor">#BA07CE</item>
-    </style>
-
-    <style name="TheStyleFloatingActionButton" parent="Widget.MaterialComponents.FloatingActionButton">
-        <item name="tint">@color/red_600</item>
-    </style>
-
-    <style name="TheStyleChip" parent="Widget.MaterialComponents.Chip.Choice">
-
-    </style>
 </resources>
 
