--- a/app/src/main/res/layout/bottom_shift_layout.xml
+++ b/app/src/main/res/layout/bottom_shift_layout.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_sheet_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#f6f6fa"
-    app:behavior_hideable="true"
     app:behavior_peekHeight="@dimen/behavior_peek_height"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
