--- a/app/src/main/res/layout/fragment_picture_of_the_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day.xml
@@ -2,11 +2,12 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_margin="@dimen/margin"
     android:layout_height="match_parent">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputLayout"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/search_in_wiki"
         app:endIconDrawable="@drawable/ic_wikipedia"
@@ -25,9 +26,11 @@
 
     <rom.example.pictureoftheday.utils.EquilateralImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_planet_earth"
         android:contentDescription="@string/photo_of_the_day_stub"
         app:layout_constraintBottom_toTopOf="@id/inputLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,40 +41,6 @@
     <include
         android:id="@+id/lifeHack"
         layout="@layout/bottom_shift_layout" />
-
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chipGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        app:singleSelection="true">
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipToday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/today" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipYesterday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/yesterday" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipTheDayBeforeYesterday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pozavchera" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipFullHD"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/full_hd" />
-    </com.google.android.material.chip.ChipGroup>
-
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
