--- a/app/src/main/res/menu/menu_bottom_bar.xml
+++ b/app/src/main/res/menu/menu_bottom_bar.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/app_bar_fav"
+        android:id="@+id/appBarFavorite"
         android:icon="@drawable/ic_favorite_menu"
         android:title="@string/favorite"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/app_bar_settings"
+        android:id="@+id/appBarSettings"
         android:icon="@drawable/ic_settings_menu"
         android:title="@string/settings"
         app:showAsAction="ifRoom" />
