--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,7 +16,7 @@
     <dimen name="navigation_view_margin_end">8dp</dimen>
     <dimen name="navigation_view_margin_bottom">8dp</dimen>
 <!--    Bottom_sheet_container_dimens-->
-    <dimen name="behavior_peek_height">50dp</dimen>
+    <dimen name="behavior_peek_height">120dp</dimen>
     <dimen name="bottom_sheet_line_width">25dp</dimen>
     <dimen name="bottom_sheet_line_height">1dp</dimen>
     <dimen name="bottom_sheet_line_margin_top">4dp</dimen>
@@ -25,4 +25,6 @@
     <dimen name="bottom_sheet_title_padding_end">8dp</dimen>
     <dimen name="bottom_sheet_explanation_padding_start">8dp</dimen>
     <dimen name="bottom_sheet_explanation_padding_end">8dp</dimen>
+    <dimen name="chip_group_margin_top">16dp</dimen>
+    <dimen name="tab_layout_margin">16dp</dimen>
 </resources>
