Урок 2 | Создали свой ripple для TabItem.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,10 @@
 
     </style>
 
+    <style name="StyleForTabLayout" parent="Widget.MaterialComponents.TabLayout">
+        <item name="tabRippleColor">@drawable/tab_item_ripple</item>
+    </style>
+
 
     <style name="GrayTheme" parent="BaseTheme">
         <item name="superColor_100">@color/gray_100</item>
