--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,15 @@
         <item name="tabRippleColor">@drawable/tab_item_ripple</item>
     </style>
 
+    <style name="StyleForTextAppearance" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="fontFamily">sans-serif</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">0.0178571429</item>
+    </style>
+
 
     <style name="GrayTheme" parent="BaseTheme">
         <item name="superColor_100">@color/gray_100</item>
