--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,6 +28,8 @@
         <item name="chipStyle">@style/StyleForChip</item>
         <item name="tabStyle">@style/StyleForTabLayout</item>
         <item name="textAppearanceBody2">@style/StyleForTextAppearance</item>
+        <item name="shapeAppearanceMediumComponent">@style/StyleForShapeAppearanceCardView</item>
+
     </style>
 
 
