--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    <androidx.appcompat.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/settingsFragmentImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,44 +14,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_planet_earth" />-->
+        app:srcCompat="@drawable/ic_planet_earth" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chipGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/chip_group_margin_top"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:singleSelection="true">
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipToday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="@string/today" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipYesterday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/yesterday" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipTheDayBeforeYesterday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pozavchera" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chipFullHD"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/full_hd" />
-    </com.google.android.material.chip.ChipGroup>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
@@ -82,12 +47,11 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:id="@+id/cardView"
-
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/card_view_margin_top"
         android:layout_marginStart="@dimen/card_view_margin_start"
         android:layout_marginEnd="@dimen/card_view_margin_end"
         android:layout_marginBottom="@dimen/card_view_margin_bottom"
-        app:layout_constraintTop_toBottomOf="@id/chipGroup"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
