--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,4 +31,8 @@
     <dimen name="card_view_margin_start">16dp</dimen>
     <dimen name="card_view_margin_end">16dp</dimen>
     <dimen name="card_view_margin_bottom">16dp</dimen>
+    <dimen name="input_layout_margin_start">8dp</dimen>
+    <dimen name="input_layout_margin_top">8dp</dimen>
+    <dimen name="input_layout_margin_end">8dp</dimen>
+    <dimen name="input_layout_margin_bottom">8dp</dimen>
 </resources>
