--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-
     <!--Vector colors-->
     <color name="gray_vector">#66000000</color>
 
@@ -62,6 +61,9 @@
     <color name="blue_test">#6B8BFF</color>
     <color name="blue_dark_test">#003BD3</color>
     <color name="purple_test">#5C0071</color>
+
+
+    <color name="colorAccent40Alpha">#66FBC7CC</color>
 
 
 </resources>
