--- a/app/src/main/res/layout/activity_api.xml
+++ b/app/src/main/res/layout/activity_api.xml
@@ -13,11 +13,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textOne"
-        android:layout_width="wrap_content"
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/mTabLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1"
-        android:textColor="@color/red_600" />
+        android:layout_margin="@dimen/margin"
+        app:layout_constraintTop_toTopOf="@id/viewPager"
+        app:layout_constraintEnd_toEndOf="@id/viewPager"
+        app:layout_constraintStart_toStartOf="@id/viewPager" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
